[gd_scene load_steps=10 format=3 uid="uid://bs1oooukq4ki7"]

[ext_resource type="Script" path="res://scenes/UI/MiniGame/minigame_round_chest.gd" id="1_f8s1c"]
[ext_resource type="Texture2D" uid="uid://yeonmnvlpp60" path="res://sprites/UI/Minigame/key_hole.png" id="2_f08r7"]
[ext_resource type="Texture2D" uid="uid://b5fi7vkkdvuoc" path="res://sprites/UI/Minigame/round_container.png" id="2_wx4aq"]
[ext_resource type="Texture2D" uid="uid://cja3gugnjwadf" path="res://sprites/UI/Minigame/key.png" id="3_r7w83"]
[ext_resource type="Texture2D" uid="uid://dv6mohrvqtin0" path="res://sprites/fishing_game_bar.png" id="5_fxjhd"]
[ext_resource type="Script" path="res://addons/finite_state_machine/scripts/finite_state_machine.gd" id="6_v3hr0"]
[ext_resource type="Script" path="res://scripts/MiniGameSM/ChestSM/default_state.gd" id="7_r7tnh"]
[ext_resource type="Script" path="res://scripts/MiniGameSM/ChestSM/on_animation_state.gd" id="8_mra0s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f0003"]
size = Vector2(49.1666, 26)

[node name="MinigameRoundMovingCursor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f8s1c")

[node name="CatchableImg" type="Sprite2D" parent="."]
position = Vector2(947, 518)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_f08r7")

[node name="CursorContainer" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.509804)
position = Vector2(947, 518)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_wx4aq")

[node name="Bars" type="Node2D" parent="."]

[node name="Outer" type="Node2D" parent="Bars"]

[node name="Mid" type="Node2D" parent="Bars"]
scale = Vector2(0.7, 0.7)

[node name="Inner" type="Node2D" parent="Bars"]
scale = Vector2(0.49, 0.49)

[node name="Cursor" type="Node2D" parent="."]
position = Vector2(947, 518)
scale = Vector2(1.2, 1.2)

[node name="Sprite2D" type="Sprite2D" parent="Cursor"]
position = Vector2(266.667, 1.42109e-13)
rotation = -3.14159
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_r7w83")

[node name="Area2D" type="Area2D" parent="Cursor"]
collision_layer = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cursor/Area2D"]
position = Vector2(222.083, 0)
shape = SubResource("RectangleShape2D_f0003")

[node name="Cooldown" type="Timer" parent="."]
autostart = true

[node name="TimebarNode" type="Node2D" parent="."]

[node name="BackgroundTimebar" type="Sprite2D" parent="TimebarNode"]
modulate = Color(0, 0, 0, 0.509804)
scale = Vector2(16, 1)
texture = ExtResource("5_fxjhd")
region_enabled = true
region_rect = Rect2(20, 10, 30, 20)

[node name="Timebar" type="Sprite2D" parent="TimebarNode"]
texture = ExtResource("5_fxjhd")
region_enabled = true
region_rect = Rect2(20, 10, 30, 20)

[node name="Timer" type="Timer" parent="TimebarNode"]

[node name="FiniteStateMachine" type="Node" parent="."]
script = ExtResource("6_v3hr0")

[node name="DefaultState" type="Node" parent="."]
script = ExtResource("7_r7tnh")

[node name="OnAnimationState" type="Node" parent="."]
script = ExtResource("8_mra0s")

[connection signal="area_entered" from="Cursor/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Cursor/Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="Cooldown" to="." method="_on_timer_timeout"]
